--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-list-routes": "^1.2.4",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -33,6 +35,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.16.0",
     "puppeteer": "^24.4.0",
+    "razorpay": "^2.9.6",
     "resend": "^4.1.2",
     "sharp": "^0.33.5"
   },
